// Copyright (c) HashiCorp, Inc.
// SPDX-License-Identifier: MPL-2.0

syntax = "proto3";

package controller.api.services.v1;

import "controller/api/resources/accounts/v1/account.proto";
import "controller/custom_options/v1/options.proto";
import "google/api/annotations.proto";
import "google/protobuf/field_mask.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option go_package = "github.com/hashicorp/boundary/internal/gen/controller/api/services;services";
option (custom_options.v1.domain) = "auth";
// Global definitions for our API, have to go in one of the protobuf files.
// Putting it in the file that's alphabetically sorted first means it maintains
// the alphabetic ordering of services.
option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  info: {
    version: "placeholder-version" // Replaced at generation time by version/VERSION contents
    title: "Boundary controller HTTP API"
    description:
      "Welcome to the Boundary controller HTTP API documentation. "
      "This page provides a reference guide for using the Boundary controller API, a JSON-based HTTP API. "
      "The API implements commonly seen HTTP API patterns for status codes, paths and errors. "
      "See the [API overview](https://developer.hashicorp.com/boundary/docs/api-clients/api) for more information.\n\n"
      "Before reading this page, it is useful to understand Boundary's [domain model](https://developer.hashicorp.com/boundary/docs/concepts/domain-model) "
      "and to be aware of the terminology used here. "
      "To get started, search for the service you want to interact with in the sidebar to the left. "
      "Each resource in Boundary, such as accounts and credential stores, have their own service. "
      "Each service contains all the API endpoints for the resource.\n"
      "## Status codes\n"
      "- `2XX`: Boundary returns a code between `200` and `299` on success. Generally this is `200`, but implementations should be prepared to accept any `2XX` status code as indicating success. If a call returns a `2XX` code that is not `200`, it will follow well-understood semantics for those status codes.\n"
      "- `400`: Boundary returns `400` when a command cannot be completed due to invalid user input, except for a properly-formatted identifier that does not map to an existing resource, which will return a `404` as discussed below.\n"
      "- `401`: Boundary returns `401` if no authentication token is provided or if the provided token is invalid. A valid token that simply does not have permission for a resource will return a `403` instead. A token that is invalid or missing, but where the anonymous user (`u_anon`) is able to successfully perform the action, will not return a `401` but instead will return the result of the action.\n"
      "- `403`: Boundary returns `403` if a provided token was valid but does not have the grants required to perform the requested action.\n"
      "- `404`: Boundary returns `404` if a resource cannot be found. Note that this happens _prior_ to authentication/authorization checking in nearly all cases as the resource information (such as its scope, available actions, etc.) is a required part of that check. As a result, an action against a resource that does not exist will return a `404` instead of a `401` or `403`. While this could be considered an information leak, since IDs are randomly generated and this only discloses whether an ID is valid, it's tolerable as it allows for far simpler and more robust client implementation.\n"
      "- `405`: Boundary returns a `405` to indicate that the method (HTTP verb or custom action) is not implemented for the given resource.\n"
      "- `429`: Boundary returns a `429` if any of the API rate limit quotas have been exhausted for the resource and action. It includes the `Retry-After` header so that the client knows how long to wait before making a new request.\n"
      "- `500`: Boundary returns `500` if an error occurred that is not (directly) tied to invalid user input. If a `500` is generated, information about the error will be logged to Boundary's server log but is not generally provided to the client.\n"
      "- `503`: Boundary returns a `503` if it is unable to store a quota due to the API rate limit being exceeded. It includes the `Retry-After` header so that the client knows how long to wait before making a new request.\n"
      "## List pagination\n"
      "Boundary uses [API pagination](https://developer.hashicorp.com/boundary/docs/api-clients/api/pagination) "
      "to support searching and filtering large lists of results efficiently."
    contact: {
      name: "HashiCorp Boundary"
      url: "https://www.boundaryproject.io/"
    };
    license: {
      name: "Business Source License 1.1"
      url: "https://github.com/hashicorp/boundary/blob/main/LICENSE"
    };
  }
  host: "your-boundary-hostname.com"
  external_docs: {
    url: "https://developer.hashicorp.com/boundary/docs"
    description: "Boundary Docs"
  }
  schemes: HTTPS
  schemes: HTTP
  consumes: "application/json"
  produces: "application/json"
  responses: {
    key: "default";
    value: {
      description: "Returned when there was an error processing the request."
      schema: {
        json_schema: {ref: ".controller.api.v1.Error"}
      }
    }
  }
  security_definitions: {
    security: {
      key: "ApiKeyAuth"
      value: {
        type: TYPE_API_KEY
        in: IN_HEADER
        name: "Authorization"
      }
    }
  }
  security: {
    security_requirement: {
      key: "ApiKeyAuth"
      value: {}
    }
  }
};

service AccountService {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_tag) = {
    name: "Account service"
    description:
      "The account service exposes endpoints for interacting with accounts in Boundary. "
      "Accounts belong to an auth method and are associated with users."
    external_docs: {
      url: "https://developer.hashicorp.com/boundary/docs/concepts/domain-model/accounts";
      description: "Read about accounts in the Boundary domain model";
    }
  };

  // GetAccount returns a stored account if present. The provided request must
  // include the id for the account be retrieved. If missing, malformed or
  // referencing a non existing account an error is returned.
  rpc GetAccount(GetAccountRequest) returns (GetAccountResponse) {
    option (google.api.http) = {
      get: "/v1/accounts/{id}"
      response_body: "item"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {summary: "Gets a single account based on the input id"};
  }

  // ListAccounts returns a list of stored accounts which exist inside the
  // provided auth method. The request must include the auth method id which
  // contains the accounts being listed. If missing or malformed an error
  // is returned.
  rpc ListAccounts(ListAccountsRequest) returns (ListAccountsResponse) {
    option (google.api.http) = {get: "/v1/accounts"};
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {summary: "Lists all accounts in a specific auth method."};
  }

  // CreateAccount creates and stores an account in boundary. The provided
  // request must include the auth method ID in which the account will be
  // created. If the auth method ID is missing, malformed, or references a non
  // existing resource an error is returned. If a name or login_name is
  // provided that is in use in another account in the same auth method an
  // error is returned.
  rpc CreateAccount(CreateAccountRequest) returns (CreateAccountResponse) {
    option (google.api.http) = {
      post: "/v1/accounts"
      body: "item"
      response_body: "item"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {summary: "Creates a single account in the provided auth method."};
  }

  // UpdateAccount updates an existing account in boundary. The provided account
  // must not have any read only fields set. The update mask must be included in
  // the request and contain at least 1 mutable field. To unset a field's value,
  // include the field in the update mask and don't set it in the provided
  // account. An error is returned if the account id is missing or references a
  // non-existing resource. An error is also returned if the request attempts
  // to update the name or login_name to one that is already in use in the
  // containing auth method.
  rpc UpdateAccount(UpdateAccountRequest) returns (UpdateAccountResponse) {
    option (google.api.http) = {
      patch: "/v1/accounts/{id}"
      body: "item"
      response_body: "item"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {summary: "Updates an account."};
  }

  // DeleteAccount removes an account from Boundary. If the provided account Id
  // is malformed or not provided an error is returned.
  rpc DeleteAccount(DeleteAccountRequest) returns (DeleteAccountResponse) {
    option (google.api.http) = {delete: "/v1/accounts/{id}"};
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {summary: "Deletes an account."};
  }

  // SetPassword sets the account's password to the one provided in the
  // request. This method is intended for administration purpose and as such
  // does not require the old password.
  rpc SetPassword(SetPasswordRequest) returns (SetPasswordResponse) {
    option (google.api.http) = {
      post: "/v1/accounts/{id}:set-password"
      body: "*"
      response_body: "item"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {summary: "Sets the password for the provided account."};
  }

  // ChangePassword changes the account's password to the one provided in the
  // request. This method is intended for end users and requires the existing
  // password to be provided for authentication purposes.
  rpc ChangePassword(ChangePasswordRequest) returns (ChangePasswordResponse) {
    option (google.api.http) = {
      post: "/v1/accounts/{id}:change-password"
      body: "*"
      response_body: "item"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {summary: "Sets the password for the provided account."};
  }
}

message GetAccountRequest {
  // The id of the account that should be retrieved.
  string id = 1; // @gotags: `class:"public" eventstream:"observation"`
}

message GetAccountResponse {
  resources.accounts.v1.Account item = 1;
}

message ListAccountsRequest {
  // The id of the auth method whose accounts should be listed.
  string auth_method_id = 1 [json_name = "auth_method_id"]; // @gotags: `class:"public" eventstream:"observation"`
  // Filter can be specified to only return items that match the filter.
  // See [filter expressions](https://developer.hashicorp.com/boundary/docs/concepts/filtering) for more information.
  string filter = 30 [json_name = "filter"]; // @gotags: `class:"sensitive"`
  // An opaque token used to continue an existing iteration or
  // request updated items. If not specified, pagination
  // will start from the beginning. To learn more about list pagination
  // in Boundary, refer to [list pagination](https://developer.hashicorp.com/boundary/docs/api-clients/api/pagination).
  string list_token = 40 [json_name = "list_token"]; // @gotags: `class:"public"`
  // The maximum size of a page in this iteration.
  // If unset, the default page size configured will be used.
  // If the page_size is greater than the default page configured,
  // the page size will be truncated to this number.
  uint32 page_size = 50 [json_name = "page_size"]; // @gotags: `class:"public"`
}

message ListAccountsResponse {
  // The list of accounts.
  repeated resources.accounts.v1.Account items = 1;
  // The type of response, either "delta" or "complete".
  // Delta signifies that this is part of a paginated result
  // or an update to a previously completed pagination.
  // Complete signifies that it is the last page.
  string response_type = 2 [json_name = "response_type"]; // @gotags: `class:"public"`
  // An opaque token used to continue an existing pagination or
  // request updated items. Use this token in the next list request
  // to request the next page.
  string list_token = 3 [json_name = "list_token"]; // @gotags: `class:"public"`
  // The name of the field which the items are sorted by.
  string sort_by = 4 [json_name = "sort_by"]; // @gotags: `class:"public"`
  // The direction of the sort, either "asc" or "desc".
  string sort_dir = 5 [json_name = "sort_dir"]; // @gotags: `class:"public"`
  // A list of item IDs that have been removed since they were returned
  // as part of a pagination. They should be dropped from any client cache.
  // This may contain items that are not known to the cache, if they were
  // created and deleted between listings.
  repeated string removed_ids = 6 [json_name = "removed_ids"]; // @gotags: `class:"public"`
  // An estimate at the total items available. This may change during pagination.
  uint32 est_item_count = 7 [json_name = "est_item_count"]; // @gotags: `class:"public"`
}

message CreateAccountRequest {
  resources.accounts.v1.Account item = 2;
}

message CreateAccountResponse {
  string uri = 1; // @gotags: `class:"public" eventstream:"observation"`
  resources.accounts.v1.Account item = 2;
}

message UpdateAccountRequest {
  // The id of the account that should be updated.
  string id = 1; // @gotags: `class:"public" eventstream:"observation"`
  // A subset of the account containing the fields to update.
  resources.accounts.v1.Account item = 2;
  google.protobuf.FieldMask update_mask = 3 [json_name = "update_mask"];
}

message UpdateAccountResponse {
  resources.accounts.v1.Account item = 1;
}

message DeleteAccountRequest {
  // The id of the account to delete.
  string id = 1; // @gotags: `class:"public" eventstream:"observation"`
}

message DeleteAccountResponse {}

message SetPasswordRequest {
  // The id of the account for which the password should be set.
  string id = 1; // @gotags: `class:"public" eventstream:"observation"`
  // Version is used to ensure this resource has not changed.
  // The mutation will fail if the version does not match the latest known good version.
  uint32 version = 2; // @gotags: `class:"public"`
  // The password that should be set.
  string password = 3; // @gotags: `class:"secret"`
}

message SetPasswordResponse {
  resources.accounts.v1.Account item = 1;
}

message ChangePasswordRequest {
  // The id of the account for which the password should be changed.
  string id = 1; // @gotags: `class:"public" eventstream:"observation"`
  // Version is used to ensure this resource has not changed.
  // The mutation will fail if the version does not match the latest known good version.
  uint32 version = 2; // @gotags: `class:"public"`
  // The current password for the account.
  string current_password = 3 [json_name = "current_password"]; // @gotags: `class:"secret"`
  // The new password that should be set.
  string new_password = 4 [json_name = "new_password"]; // @gotags: `class:"secret"`
}

message ChangePasswordResponse {
  resources.accounts.v1.Account item = 1;
}
